--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -12,6 +12,17 @@ grpc:
 flair-cache:
   enabled: false
 
+management:
+  endpoint.prometheus.enabled: true
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - info
+          - prometheus
+      base-path: "/actuator"
+
 ---
 spring:
   profiles: dev
