--- a/pom.xml
+++ b/pom.xml
@@ -195,8 +195,8 @@
 
         <!-- our dependencies -->
         <flair-messages.version>0.0.34</flair-messages.version>
-        <flair-query-language.version>1.6.7</flair-query-language.version>
-        <project-bi-common.version>1.3.28</project-bi-common.version>
+        <flair-query-language.version>1.6.8-SNAPSHOT</flair-query-language.version>
+        <project-bi-common.version>1.3.29-SNAPSHOT</project-bi-common.version>
         <all-grpc.version>1.23.0</all-grpc.version>
         <lombok.version>1.18.8</lombok.version>
 
